--- a/src/MakePdf.Wpf/Views/MainWindow.xaml
+++ b/src/MakePdf.Wpf/Views/MainWindow.xaml
@@ -1,12 +1,26 @@
-﻿<Window x:Class="MakePdf.Wpf.MainWindow"
+﻿<Window x:Class="MakePdf.Wpf.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MakePdf.Wpf"
+        xmlns:localvm="clr-namespace:MakePdf.Wpf.ViewModels"
+        xmlns:localview="clr-namespace:MakePdf.Wpf.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <!-- View と ViewModel のマッピング -->
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type localvm:HomePageViewModel}">
+            <localview:HomePage/>
+        </DataTemplate>
+    </Window.Resources>
+    <Window.DataContext>
+        <localvm:MainWindowViewModel/>
+    </Window.DataContext>
+
+    <DockPanel LastChildFill="True" >
+        <Button DockPanel.Dock="Top" Content="TogglePageCommand" Command="{Binding TogglePageCommand}"/>
+        <!-- CurrentPageのViewModelを使用して現在の画面を表示 -->
+        <ContentControl DockPanel.Dock="Bottom" Content="{Binding CurrentPage}" />
+    </DockPanel>
 </Window>
