--- a/src/MakePdf.Wpf/Views/MainWindow.xaml
+++ b/src/MakePdf.Wpf/Views/MainWindow.xaml
@@ -17,7 +17,7 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
-    <!-- View と ViewModel のマッピング -->
+    <!-- Mapping of View and ViewModel -->
     <Window.Resources>
         <DataTemplate DataType="{x:Type localvm:HomePageViewModel}">
             <localview:HomePage/>
@@ -28,8 +28,60 @@
     </Window.DataContext>
 
     <DockPanel LastChildFill="True" >
-        
-        <!-- CurrentPageのViewModelを使用して現在の画面を表示 -->
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+            <Menu IsMainMenu="True" >
+                <MenuItem Header="_File">
+                    <MenuItem Header="Save">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="ContentSave" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Save As.." />
+                    <MenuItem Header="Exit" InputGestureText="Ctrl+E">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="ExitToApp" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <Separator />
+                    <MenuItem Header="Excellent" IsCheckable="True" IsChecked="True" />
+                    <MenuItem Header="Rubbish" IsCheckable="True" />
+                    <MenuItem Header="Dig Deeper" InputGestureText="Ctrl+D">
+                        <MenuItem Header="Enlightenment?" IsCheckable="True" />
+                        <MenuItem Header="Disappointment" IsCheckable="True" />
+                    </MenuItem>
+                    <MenuItem Header="Look Deeper" InputGestureText="Ctrl+D">
+                        <MenuItem Header="Plain" />
+                        <MenuItem Header="Ice Cream" />
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
+            <Menu IsMainMenu="False">
+                <MenuItem Header="_File">
+                    <MenuItem Header="Save">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="ContentSave" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Save As.." />
+                    <MenuItem Header="Exit" InputGestureText="Ctrl+E">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="ExitToApp" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <Separator />
+                    <MenuItem Header="Excellent" IsCheckable="True" IsChecked="True" />
+                    <MenuItem Header="Rubbish" IsCheckable="True" />
+                    <MenuItem Header="Dig Deeper" InputGestureText="Ctrl+D">
+                        <MenuItem Header="Enlightenment?" IsCheckable="True" />
+                        <MenuItem Header="Disappointment" IsCheckable="True" />
+                    </MenuItem>
+                    <MenuItem Header="Look Deeper" InputGestureText="Ctrl+D">
+                        <MenuItem Header="Plain" />
+                        <MenuItem Header="Ice Cream" />
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
+        </StackPanel>
         <ContentControl DockPanel.Dock="Bottom" Content="{Binding CurrentPage}" />
     </DockPanel>
 </Window>
