--- a/src/MakePdf.Wpf/Views/HomePage.xaml
+++ b/src/MakePdf.Wpf/Views/HomePage.xaml
@@ -6,8 +6,39 @@
              xmlns:localvm="clr-namespace:MakePdf.Wpf.ViewModels"
              xmlns:localview="clr-namespace:MakePdf.Wpf.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+             
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+             TextElement.FontWeight="Regular"
+             TextElement.FontSize="13"
+             TextOptions.TextFormattingMode="Ideal"
+             TextOptions.TextRenderingMode="Auto"
+             Background="{DynamicResource MaterialDesignPaper}"
+             FontFamily="{DynamicResource MaterialDesignFont}">
+    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
+        <materialDesign:Card Padding="0" Margin="10">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                <Button Height="100" Width="100" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Content="SIMPLE" />
+
+                <Border BorderThickness="0" BorderBrush="LightGray" />
+                <StackPanel Margin="10">
+                    <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Simple Mode</TextBlock>
+                    <Border BorderThickness="0.5" BorderBrush="LightGray" />
+                    <TextBlock Margin="5">Simple Mode</TextBlock>
+                </StackPanel>
+            </StackPanel>
+        </materialDesign:Card>
+        <materialDesign:Card Padding="0" Margin="10">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                <Button Height="100" Width="100" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Content="EXPERT" />
+
+                <Border BorderThickness="0" BorderBrush="LightGray" />
+                <StackPanel Margin="10">
+                    <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Expert Mode</TextBlock>
+                    <Border BorderThickness="0.5" BorderBrush="LightGray" />
+                    <TextBlock Margin="5">Simple Mode</TextBlock>
+                </StackPanel>
+            </StackPanel>
+        </materialDesign:Card>
+    </StackPanel>
 </UserControl>
