--- a/src/MakePdf.Wpf/Views/MainWindow.xaml
+++ b/src/MakePdf.Wpf/Views/MainWindow.xaml
@@ -30,54 +30,34 @@
     <DockPanel LastChildFill="True" >
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
             <Menu IsMainMenu="True" >
-                <MenuItem Header="_File">
-                    <MenuItem Header="Save">
-                        <MenuItem.Icon>
-                            <materialDesign:PackIcon Kind="ContentSave" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Header="Save As.." />
-                    <MenuItem Header="Exit" InputGestureText="Ctrl+E">
+                <MenuItem Header="File(_F)">
+                    <Separator />
+                    <MenuItem Header="Exit" InputGestureText="Alt+F4">
                         <MenuItem.Icon>
                             <materialDesign:PackIcon Kind="ExitToApp" />
                         </MenuItem.Icon>
-                    </MenuItem>
-                    <Separator />
-                    <MenuItem Header="Excellent" IsCheckable="True" IsChecked="True" />
-                    <MenuItem Header="Rubbish" IsCheckable="True" />
-                    <MenuItem Header="Dig Deeper" InputGestureText="Ctrl+D">
-                        <MenuItem Header="Enlightenment?" IsCheckable="True" />
-                        <MenuItem Header="Disappointment" IsCheckable="True" />
-                    </MenuItem>
-                    <MenuItem Header="Look Deeper" InputGestureText="Ctrl+D">
-                        <MenuItem Header="Plain" />
-                        <MenuItem Header="Ice Cream" />
                     </MenuItem>
                 </MenuItem>
             </Menu>
-            <Menu IsMainMenu="False">
-                <MenuItem Header="_File">
-                    <MenuItem Header="Save">
+            <Menu IsMainMenu="True">
+                <MenuItem Header="Help(_H)">
+                    <MenuItem Header="GitHub">
                         <MenuItem.Icon>
-                            <materialDesign:PackIcon Kind="ContentSave" />
+                            <materialDesign:PackIcon Kind="GitHubCircle" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Save As.." />
-                    <MenuItem Header="Exit" InputGestureText="Ctrl+E">
+                    <MenuItem Header="Usage">
                         <MenuItem.Icon>
-                            <materialDesign:PackIcon Kind="ExitToApp" />
+                            <materialDesign:PackIcon Kind="HelpCircleOutline" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="Check Update">
+                        <MenuItem.Icon>
+                            <materialDesign:PackIcon Kind="Autorenew" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
-                    <MenuItem Header="Excellent" IsCheckable="True" IsChecked="True" />
-                    <MenuItem Header="Rubbish" IsCheckable="True" />
-                    <MenuItem Header="Dig Deeper" InputGestureText="Ctrl+D">
-                        <MenuItem Header="Enlightenment?" IsCheckable="True" />
-                        <MenuItem Header="Disappointment" IsCheckable="True" />
-                    </MenuItem>
-                    <MenuItem Header="Look Deeper" InputGestureText="Ctrl+D">
-                        <MenuItem Header="Plain" />
-                        <MenuItem Header="Ice Cream" />
+                    <MenuItem Header="About">
                     </MenuItem>
                 </MenuItem>
             </Menu>
