--- a/src/MakePdf.Wpf/Views/HomePage.xaml
+++ b/src/MakePdf.Wpf/Views/HomePage.xaml
@@ -15,30 +15,22 @@
              TextOptions.TextRenderingMode="Auto"
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}">
+
     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
-        <materialDesign:Card Padding="0" Margin="10">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
-                <Button Height="100" Width="100" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Content="SIMPLE" />
-
-                <Border BorderThickness="0" BorderBrush="LightGray" />
-                <StackPanel Margin="10">
-                    <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Simple Mode</TextBlock>
-                    <Border BorderThickness="0.5" BorderBrush="LightGray" />
-                    <TextBlock Margin="5">Simple Mode</TextBlock>
-                </StackPanel>
+        <Button Height="120"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" Padding="0" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" >
+            <StackPanel Margin="5" HorizontalAlignment="Left">
+                <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Easy Mode</TextBlock>
+                <Border BorderThickness="0.5" BorderBrush="LightGray" />
+                <TextBlock Margin="5">Easy Mode</TextBlock>
             </StackPanel>
-        </materialDesign:Card>
-        <materialDesign:Card Padding="0" Margin="10">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
-                <Button Height="100" Width="100" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Content="EXPERT" />
+        </Button>
 
-                <Border BorderThickness="0" BorderBrush="LightGray" />
-                <StackPanel Margin="10">
-                    <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Expert Mode</TextBlock>
-                    <Border BorderThickness="0.5" BorderBrush="LightGray" />
-                    <TextBlock Margin="5">Simple Mode</TextBlock>
-                </StackPanel>
+        <Button Height="120"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" Padding="0" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" >
+            <StackPanel Margin="5" HorizontalAlignment="Left">
+                <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Standard Mode</TextBlock>
+                <Border BorderThickness="0.5" BorderBrush="LightGray" />
+                <TextBlock Margin="5">Standard Mode</TextBlock>
             </StackPanel>
-        </materialDesign:Card>
+        </Button>
     </StackPanel>
 </UserControl>
