--- a/src/MakePdf.Wpf/App.xaml
+++ b/src/MakePdf.Wpf/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="MakePdf.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MakePdf.Wpf"
-             StartupUri="Views/MainWindow.xaml">
+             xmlns:local="clr-namespace:MakePdf.Wpf">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
