--- a/src/MakePdf.Wpf/Views/Menu.xaml
+++ b/src/MakePdf.Wpf/Views/Menu.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:localvm="clr-namespace:MakePdf.Wpf.ViewModels"
-             xmlns:localview="clr-namespace:MakePdf.Wpf.Views"
+             xmlns:local="clr-namespace:MakePdf.Wpf.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
