--- a/src/MakePdf.Wpf/Views/Home.xaml
+++ b/src/MakePdf.Wpf/Views/Home.xaml
@@ -17,7 +17,7 @@
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}">
 
-    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top">
+    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Button Height="120"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" Padding="0" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Command="{Binding EasyModeButtonCommand}">
             <StackPanel Margin="5" HorizontalAlignment="Left">
                 <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Easy Mode</TextBlock>
