--- a/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
+++ b/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
@@ -19,12 +19,13 @@
     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
             <!-- default(32) + margin(10 x 2) -->
             <RowDefinition Height="52" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
         <ListView Grid.Row="0" Grid.Column="0" ItemsSource="{Binding TargetFiles}" SelectedItem="{Binding SelectedItem}" SelectedIndex="{Binding SelectedIndex}" AllowDrop="True" Drop="ListView_Drop" PreviewDragOver="ListView_PreviewDragOver" SelectionMode="Single">
             <ListView.View>
@@ -35,32 +36,20 @@
             </ListView.View>
         </ListView>
         <StackPanel Grid.Row="0" Grid.Column="1">
-            <Button Margin="10" Command="{Binding UpButtonCommand}">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="ArrowUpBold"/>
-                    <TextBlock VerticalAlignment="Center" Text="Up" Margin="5,0,0,0"/>
-                </StackPanel>
+            <Button Margin="5" Command="{Binding  UpButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Up">
+                <materialDesign:PackIcon Kind="ArrowUpBold" Height="24" Width="24" />
             </Button>
-            <Button Margin="10" Command="{Binding  DownButtonCommand}">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="ArrowDownBold"/>
-                    <TextBlock VerticalAlignment="Center" Text="Down" Margin="5,0,0,0"/>
-                </StackPanel>
+            <Button Margin="5" Command="{Binding  DownButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Down">
+                <materialDesign:PackIcon Kind="ArrowDownBold" Height="24" Width="24" />
             </Button>
-            <Button Margin="10" Command="{Binding  DeleteButtonCommand}">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Delete"/>
-                    <TextBlock VerticalAlignment="Center" Text="Delete" Margin="5,0,0,0"/>
-                </StackPanel>
+            <Button Margin="5" Command="{Binding  DeleteButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Delete">
+                <materialDesign:PackIcon Kind="Delete" Height="24" Width="24" />
             </Button>
-            <Button Margin="10" Command="{Binding  ClearButtonCommand}">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Broom"/>
-                    <TextBlock VerticalAlignment="Center" Text="Clear" Margin="5,0,0,0"/>
-                </StackPanel>
+            <Button Margin="5" Command="{Binding  ClearButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Clear">
+                <materialDesign:PackIcon Kind="Broom" Height="24" Width="24" />
             </Button>
         </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
+        <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
             <Button Width="100" Margin="10" Command="{Binding  BackButtonCommand}">
                 <StackPanel Orientation="Horizontal" >
                     <materialDesign:PackIcon Kind="ArrowLeftBold"/>
@@ -68,12 +57,17 @@
                 </StackPanel>
             </Button>
         </StackPanel>
+        <DockPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" LastChildFill="true">
+            <materialDesign:PackIcon Margin="5" Height="24" Width="24" Kind="File" Foreground="{Binding ElementName=PhoneTextBox, Path=BorderBrush}" VerticalAlignment="Center"/>
+            <TextBox x:Name="PhoneTextBox" materialDesign:HintAssist.Hint="Output File" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" />
+        </DockPanel>
+        <Button Grid.Row="1" Grid.Column="1" Margin="10" VerticalAlignment="Center" Content="..." Click="BrowseButton_Click" ToolTip="Open File Dialog" />
         <StackPanel Grid.Row="1" Grid.Column="1">
-            <Button Margin="10" Command="{Binding  StartButtonCommand}">
-                <StackPanel Orientation="Horizontal" >
-                    <materialDesign:PackIcon Kind="Play"/>
-                    <TextBlock VerticalAlignment="Center" Text="Start" Margin="5,0,0,0"/>
-                </StackPanel>
+
+        </StackPanel>
+        <StackPanel Grid.Row="2" Grid.Column="1">
+            <Button Command="{Binding  StartButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}" ToolTip="Start">
+                <materialDesign:PackIcon Kind="Play" Height="24" Width="24" />
             </Button>
         </StackPanel>
     </Grid>
