--- a/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
+++ b/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
@@ -57,11 +57,13 @@
                 </StackPanel>
             </Button>
         </StackPanel>
-        <DockPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" LastChildFill="true">
-            <materialDesign:PackIcon Margin="5" Height="24" Width="24" Kind="File" Foreground="{Binding ElementName=PhoneTextBox, Path=BorderBrush}" VerticalAlignment="Center"/>
-            <TextBox x:Name="PhoneTextBox" materialDesign:HintAssist.Hint="Output File" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" />
-        </DockPanel>
-        <Button Grid.Row="1" Grid.Column="1" Margin="10" VerticalAlignment="Center" Content="..." Click="BrowseButton_Click" ToolTip="Open File Dialog" />
+        <Border Padding="5 0 0 0" Background="{DynamicResource MaterialDesignSelection}" Grid.Row="1" Grid.Column="0">
+            <DockPanel  HorizontalAlignment="Stretch">
+                <!--<materialDesign:PackIcon DockPanel.Dock="Left" Margin="5" Height="24" Width="24" Kind="File" Foreground="{Binding ElementName=PhoneTextBox, Path=BorderBrush}" VerticalAlignment="Center"/>-->
+                <Button DockPanel.Dock="Right" Grid.Row="1" Grid.Column="1" Margin="5" VerticalAlignment="Center" Content="Browse..." Click="BrowseButton_Click" ToolTip="Open File Dialog" />
+                <TextBox materialDesign:HintAssist.Hint="Output File" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" />
+            </DockPanel>
+        </Border>
         <StackPanel Grid.Row="1" Grid.Column="1">
 
         </StackPanel>
