--- a/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
+++ b/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
@@ -52,7 +52,7 @@
         <Border Margin="0 5" Padding="5 0 0 0" Background="{DynamicResource MaterialDesignSelection}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
             <DockPanel  HorizontalAlignment="Stretch">
                 <Button DockPanel.Dock="Right" Grid.Row="1" Grid.Column="1" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="Browse..." Click="BrowseButton_Click" ToolTip="Open File Dialog" />
-                <TextBox materialDesign:HintAssist.Hint="Output File" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" />
+                <TextBox materialDesign:HintAssist.Hint="Output File" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" AllowDrop="True" Drop="OutputFile_Drop" PreviewDragOver="OutputFile_PreviewDragOver" />
             </DockPanel>
         </Border>
         <DockPanel Margin="5 10 5 0" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
