--- a/src/MakePdf.Wpf/Views/Shell.xaml
+++ b/src/MakePdf.Wpf/Views/Shell.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MakePdf.Wpf.Views.Shell"
+﻿<controls:MetroWindow x:Class="MakePdf.Wpf.Views.Shell"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,9 +7,13 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="MakePdf" Height="600" Width="800">
+        Title="MakePdf" Height="600" Width="800"
+        
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+        WindowTransitionsEnabled="False"        
+        GlowBrush="{DynamicResource AccentColorBrush}">
     <DockPanel LastChildFill="True">
         <ContentControl DockPanel.Dock="Top" prism:RegionManager.RegionName="MenuRegion" />
         <ContentControl DockPanel.Dock="Bottom" prism:RegionManager.RegionName="MainRegion" />
     </DockPanel>
-</Window>
+</controls:MetroWindow>
