--- a/src/MakePdf.Wpf/Views/Shell.xaml
+++ b/src/MakePdf.Wpf/Views/Shell.xaml
@@ -7,6 +7,7 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
+        TitleCaps="False"
         Title="MakePdf" Height="600" Width="800"
         
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
