--- a/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
+++ b/src/MakePdf.Wpf/Views/EasyMode/Input.xaml
@@ -16,59 +16,61 @@
              TextOptions.TextRenderingMode="Auto"
              Background="{DynamicResource MaterialDesignPaper}"
              FontFamily="{DynamicResource MaterialDesignFont}">
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <!-- default(32) + margin(10 x 2) -->
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="auto" />
-        </Grid.ColumnDefinitions>
-        <ListView Grid.Row="0" Grid.Column="0" ItemsSource="{Binding TargetFiles}" SelectedItem="{Binding SelectedItem}" SelectedIndex="{Binding SelectedIndex}" AllowDrop="True" Drop="ListView_Drop" PreviewDragOver="ListView_PreviewDragOver" SelectionMode="Single">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Filename" DisplayMemberBinding="{Binding Filename}" Width="200" />
-                    <GridViewColumn Header="Path" DisplayMemberBinding="{Binding Path}" Width="200" />
-                </GridView>
-            </ListView.View>
-        </ListView>
-        <StackPanel Margin="5 0 0 5" Grid.Row="0" Grid.Column="1">
-            <Button Margin="5" Command="{Binding  UpButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Up">
-                <materialDesign:PackIcon Kind="ArrowUpBold" Height="24" Width="24" />
-            </Button>
-            <Button Margin="5" Command="{Binding  DownButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Down">
-                <materialDesign:PackIcon Kind="ArrowDownBold" Height="24" Width="24" />
-            </Button>
-            <Button Margin="5" Command="{Binding  DeleteButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Delete">
-                <materialDesign:PackIcon Kind="Delete" Height="24" Width="24" />
-            </Button>
-            <Button Margin="5" Command="{Binding  ClearButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Clear">
-                <materialDesign:PackIcon Kind="Broom" Height="24" Width="24" />
-            </Button>
-        </StackPanel>
-        <Border Margin="0 5" Padding="5 0 0 0" Background="{DynamicResource MaterialDesignSelection}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
-            <DockPanel  HorizontalAlignment="Stretch">
-                <Button DockPanel.Dock="Right" Grid.Row="1" Grid.Column="1" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="Browse..." Click="BrowseButton_Click" ToolTip="Open File Dialog" />
-                <TextBox materialDesign:HintAssist.Hint="Output File" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" AllowDrop="True" Drop="OutputFile_Drop" PreviewDragOver="OutputFile_PreviewDragOver" />
+    <materialDesign:DialogHost x:Name="dialogHost">
+        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <!-- default(32) + margin(10 x 2) -->
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <ListView Grid.Row="0" Grid.Column="0" ItemsSource="{Binding TargetFiles}" SelectedItem="{Binding SelectedItem}" SelectedIndex="{Binding SelectedIndex}" AllowDrop="True" Drop="ListView_Drop" PreviewDragOver="ListView_PreviewDragOver" SelectionMode="Single">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Filename" DisplayMemberBinding="{Binding Filename}" Width="200" />
+                        <GridViewColumn Header="Path" DisplayMemberBinding="{Binding Path}" Width="200" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
+            <StackPanel Margin="5 0 0 5" Grid.Row="0" Grid.Column="1">
+                <Button Margin="5" Command="{Binding  UpButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Up">
+                    <materialDesign:PackIcon Kind="ArrowUpBold" Height="24" Width="24" />
+                </Button>
+                <Button Margin="5" Command="{Binding  DownButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Down">
+                    <materialDesign:PackIcon Kind="ArrowDownBold" Height="24" Width="24" />
+                </Button>
+                <Button Margin="5" Command="{Binding  DeleteButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Delete">
+                    <materialDesign:PackIcon Kind="Delete" Height="24" Width="24" />
+                </Button>
+                <Button Margin="5" Command="{Binding  ClearButtonCommand}" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" ToolTip="Clear">
+                    <materialDesign:PackIcon Kind="Broom" Height="24" Width="24" />
+                </Button>
+            </StackPanel>
+            <Border Margin="0 5" Padding="5 0 0 0" Background="{DynamicResource MaterialDesignSelection}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+                <DockPanel  HorizontalAlignment="Stretch">
+                    <Button DockPanel.Dock="Right" Grid.Row="1" Grid.Column="1" Margin="5" MinWidth="90"  VerticalAlignment="Center" Content="Browse..." Click="BrowseButton_Click" ToolTip="Open File Dialog" />
+                    <TextBox materialDesign:HintAssist.Hint="Output File" VerticalAlignment="Center" materialDesign:TransitionAssist.DisableTransitions="True" Text="{Binding OutputFile}" AllowDrop="True" Drop="OutputFile_Drop" PreviewDragOver="OutputFile_PreviewDragOver" />
+                </DockPanel>
+            </Border>
+            <DockPanel Margin="5 10 5 0" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
+                <Button DockPanel.Dock="Left" MinWidth="90" Command="{Binding  BackButtonCommand}">
+                    <StackPanel Orientation="Horizontal" >
+                        <materialDesign:PackIcon Kind="ArrowLeftBold"/>
+                        <TextBlock VerticalAlignment="Center" Text="Back" Margin="5,0,0,0"/>
+                    </StackPanel>
+                </Button>
+                <Button DockPanel.Dock="Right" MinWidth="90" Click="StartButton_Click" Style="{StaticResource MaterialDesignRaisedAccentButton}">
+                    <StackPanel Orientation="Horizontal" >
+                        <materialDesign:PackIcon Kind="Play"/>
+                        <TextBlock VerticalAlignment="Center" Text="Start" Margin="5,0,0,0"/>
+                    </StackPanel>
+                </Button>
+                <Rectangle />
             </DockPanel>
-        </Border>
-        <DockPanel Margin="5 10 5 0" Grid.Row="2" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2">
-            <Button DockPanel.Dock="Left" MinWidth="90" Command="{Binding  BackButtonCommand}">
-                <StackPanel Orientation="Horizontal" >
-                    <materialDesign:PackIcon Kind="ArrowLeftBold"/>
-                    <TextBlock VerticalAlignment="Center" Text="Back" Margin="5,0,0,0"/>
-                </StackPanel>
-            </Button>
-            <Button DockPanel.Dock="Right" MinWidth="90" Command="{Binding  StartButtonCommand}" Style="{StaticResource MaterialDesignRaisedAccentButton}">
-                <StackPanel Orientation="Horizontal" >
-                <materialDesign:PackIcon Kind="Play"/>
-                    <TextBlock VerticalAlignment="Center" Text="Start" Margin="5,0,0,0"/>
-                </StackPanel>
-            </Button>
-            <Rectangle />
-        </DockPanel>
-    </Grid>
+        </Grid>
+    </materialDesign:DialogHost>
 </UserControl>
