--- a/src/MakePdf.Wpf/Views/Shell.xaml
+++ b/src/MakePdf.Wpf/Views/Shell.xaml
@@ -10,11 +10,15 @@
         TitleCaps="False"
         Title="MakePdf" Height="600" Width="800"
         
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                      
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         WindowTransitionsEnabled="False"        
         GlowBrush="{DynamicResource AccentColorBrush}">
-    <DockPanel LastChildFill="True">
-        <ContentControl DockPanel.Dock="Top" prism:RegionManager.RegionName="MenuRegion" />
-        <ContentControl DockPanel.Dock="Bottom" prism:RegionManager.RegionName="MainRegion" />
-    </DockPanel>
+    <materialDesign:DialogHost x:Name="dialogHostMain">
+        <DockPanel LastChildFill="True">
+            <ContentControl DockPanel.Dock="Top" prism:RegionManager.RegionName="MenuRegion" />
+            <ContentControl DockPanel.Dock="Bottom" prism:RegionManager.RegionName="MainRegion" />
+        </DockPanel>
+    </materialDesign:DialogHost>
 </controls:MetroWindow>
