--- a/src/MakePdf.Wpf/Views/Shell.xaml
+++ b/src/MakePdf.Wpf/Views/Shell.xaml
@@ -1,24 +1,18 @@
-﻿<controls:MetroWindow x:Class="MakePdf.Wpf.Views.Shell"
+﻿<Window x:Class="MakePdf.Wpf.Views.Shell"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MakePdf.Wpf.Views"
         xmlns:prism="http://prismlibrary.com/"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        TitleCaps="False"
-        Title="MakePdf" Height="600" Width="800"
-        
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                      
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        WindowTransitionsEnabled="False"        
-        GlowBrush="{DynamicResource AccentColorBrush}">
+        Title="MakePdf" Height="600" Width="800">
     <materialDesign:DialogHost x:Name="dialogHostMain">
         <DockPanel LastChildFill="True">
             <ContentControl DockPanel.Dock="Top" prism:RegionManager.RegionName="MenuRegion" />
             <ContentControl DockPanel.Dock="Bottom" prism:RegionManager.RegionName="MainRegion" />
         </DockPanel>
     </materialDesign:DialogHost>
-</controls:MetroWindow>
+</Window>
