--- a/src/MakePdf.Wpf/Views/Dialogs/YesNoDialog.xaml
+++ b/src/MakePdf.Wpf/Views/Dialogs/YesNoDialog.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MakePdf.Wpf.Views.EasyMode"
+             xmlns:local="clr-namespace:MakePdf.Wpf.Views.Dialogs"
              xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d">
@@ -11,11 +11,15 @@
         <Label Content="{Binding Title}" x:Name="labelTitle" FontSize="24"/>
         <Label Content="{Binding Message}" x:Name="labelMessage"/>
         <StackPanel Margin="16" Orientation="Horizontal">
-            <Button Content="Yes" Style="{DynamicResource MaterialDesignFlatButton}" Command="{x:Static material:DialogHost.CloseDialogCommand}"/>
+            <Button Content="Yes" Style="{DynamicResource MaterialDesignFlatButton}" Command="{x:Static material:DialogHost.CloseDialogCommand}">
+                <Button.CommandParameter>
+                    <local:YesNo>Yes</local:YesNo>
+                </Button.CommandParameter>
+            </Button>
             <Button Content="No" Style="{StaticResource MaterialDesignFlatButton}"
                 Command="{x:Static material:DialogHost.CloseDialogCommand}">
                 <Button.CommandParameter>
-                    <system:Boolean>False</system:Boolean>
+                    <local:YesNo>No</local:YesNo>
                 </Button.CommandParameter>
             </Button>
         </StackPanel>
