--- a/src/MakePdf.Wpf/Views/Menu.xaml
+++ b/src/MakePdf.Wpf/Views/Menu.xaml
@@ -34,12 +34,12 @@
         </Menu>
         <Menu IsMainMenu="True">
             <MenuItem Header="Help(_H)">
-                <MenuItem Header="GitHub">
+                <MenuItem Header="GitHub" Click="GitHub_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="GitHubCircle" />
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Usage">
+                <MenuItem Header="Usage" Click="Usage_Click">
                     <MenuItem.Icon>
                         <materialDesign:PackIcon Kind="HelpCircleOutline" />
                     </MenuItem.Icon>
@@ -50,7 +50,7 @@
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="About">
+                <MenuItem Header="About" Click="About_Click">
                 </MenuItem>
             </MenuItem>
         </Menu>
