--- a/src/MakePdf.Wpf/Views/Dialogs/Common/ProcessingDialog.xaml
+++ b/src/MakePdf.Wpf/Views/Dialogs/Common/ProcessingDialog.xaml
@@ -1,12 +1,21 @@
-﻿<UserControl x:Class="MakePdf.Wpf.Views.Dialogs.ProcessingDialog"
+﻿<UserControl x:Class="MakePdf.Wpf.Views.Dialogs.Common.ProcessingDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MakePdf.Wpf.Views.Dialogs"
+             xmlns:local="clr-namespace:MakePdf.Wpf.Views.Dialogs.Common"
              xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+             TextElement.FontWeight="Regular"
+             TextElement.FontSize="13"
+             TextOptions.TextFormattingMode="Ideal"
+             TextOptions.TextRenderingMode="Auto"
+             Background="{DynamicResource MaterialDesignPaper}"
+             FontFamily="{DynamicResource MaterialDesignFont}">
     <StackPanel Margin="10">
         <Label Content="{Binding Title}" x:Name="labelTitle" FontSize="24"/>
         <Label Content="{Binding Message}" x:Name="labelMessage"/>
