--- a/src/MakePdf.Wpf/Views/Pages/Home.xaml
+++ b/src/MakePdf.Wpf/Views/Pages/Home.xaml
@@ -26,7 +26,7 @@
             </StackPanel>
         </Button>
 
-        <Button Height="120"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" Padding="0" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" >
+        <Button Height="120"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10" Padding="0" Style="{StaticResource MaterialDesignRaisedButton}" ToolTip="Resource name: MaterialDesignRaisedButton" Command="{Binding StandardModeButtonCommand}">
             <StackPanel Margin="5" HorizontalAlignment="Left">
                 <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="5">Standard Mode</TextBlock>
                 <Border BorderThickness="0.5" BorderBrush="LightGray" />
